--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 @font-face {
     font-family: Consolas;
-    src: url("assets/fonts/consolas.ttf");
+    src: url("assets/fonts/Consolas.ttf");
 }
 
 @media (max-width: 576px) {
