--- a/src/app/administracion/productores/productor-lista/productor-lista.component.html
+++ b/src/app/administracion/productores/productor-lista/productor-lista.component.html
@@ -5,6 +5,7 @@
     <table class="table table-hover">
         <thead>
         <tr>
+            <th width="1"></th>
             <th>Nombre</th>
             <th>RUC</th>
             <th>Correo</th>
@@ -15,6 +16,7 @@
         </thead>
         <tbody>
         <tr *ngFor="let productor of productores; let i = index">
+            <td>{{ i + 1 }}</td>
             <td><a [routerLink]="['../view', productor.id]">{{ productor.nombre + " " + productor.apellido }}</a></td>
             <td>{{ productor.ruc }}</td>
             <td>{{ productor.correo }}</td>
