--- a/src/app/administracion/bodegas/bodega-lista/bodega-lista.component.html
+++ b/src/app/administracion/bodegas/bodega-lista/bodega-lista.component.html
@@ -5,12 +5,17 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th width="1">#</th>
-            <th>Codigo</th>
-            <th>Nombre</th>
-            <th class="text-xs-center">Habilitado</th>
-            <th class="text-xs-center">Creado</th>
-            <th></th>
+            <th width="1" rowspan="2">#</th>
+            <th rowspan="2">Codigo</th>
+            <th rowspan="2">Nombre</th>
+            <th class="text-xs-center" rowspan="2">Habilitada</th>
+            <th class="thead-expand-title" colspan="2">Encargado</th>
+            <th class="text-xs-center" rowspan="2">Creado</th>
+            <th rowspan="2" width="98"></th>
+        </tr>
+        <tr class="thead-expand">
+            <th class="text-sm-left">Nombre</th>
+            <th class="text-sm-left">Correo</th>
         </tr>
         </thead>
         <tbody>
@@ -19,6 +24,8 @@
             <td><code><a [routerLink]="['../view', bodega.id]">{{ bodega.codigo }}</a></code></td>
             <td><a [routerLink]="['../view', bodega.id]">{{ bodega.nombre }}</a></td>
             <td class="text-xs-center">{{ bodega.active ? "Si" : "No" }}</td>
+            <td>{{ bodega.encargado.nombre }} {{ bodega.encargado.apellido }}</td>
+            <td>{{ bodega.encargado.correo }}</td>
             <td class="text-xs-center">{{ bodega.created | date }}</td>
             <td class="list-actions">
                 <a [routerLink]="['../edit', bodega.id]"><i class="fa fa-pencil"></i></a>
