--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div>
-    <small class="text-muted">{{compania}} - {{ header?.grupo }}</small>
+    <small class="text-muted"><strong>{{compania}}</strong> - {{ header?.grupo }}</small>
     <div class="clearfix">
         <div class="float-xs-right">
             <div class="btn-group">
