--- a/src/app/shared/components/form-controls/input-collection/input-collection.component.css
+++ b/src/app/shared/components/form-controls/input-collection/input-collection.component.css
@@ -3,7 +3,11 @@
     user-select: none;
 }
 
-input[readonly] {
+input:read-only:disabled {
+    background-color: rgb(236, 238, 239);
+}
+
+input:read-only {
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
@@ -36,12 +40,12 @@ span.chevron:after {
     position: absolute;
     left: 0;
     right: 0;
-    background: rgb(255,255,255);
+    background-color: rgb(255,255,255);
     display: none;
-    border: 1px solid rgba(0,0,0,.15);
+    border: 1px solid rgba(0,0,0,.30);
     border-top: none;
     border-radius: 0 0 .25rem .25rem;
-    box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.13);
+    z-index: 99;
 }
 
 .active .options {
@@ -54,7 +58,7 @@ span.chevron:after {
 }
 
 .options .item:hover {
-    background: #0275d8;
+    background-color: #0275d8;
     color: #fff
 }
 .options .item-label {
