--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -14,7 +14,7 @@
         <div class="p-l-1 m-t-1 text-muted nav-section-name"><i class="fa fa-fw fa-dollar"></i> Contabilidad</div>
         <ul class="nav-child">
             <li class="nav-item">
-                <a class="nav-link" routerLink="#" routerLinkActive="active">Pagos y Facturas</a>
+                <a class="nav-link" routerLink="contabilidad/facturas" routerLinkActive="active">Pagos y Facturas</a>
             </li>
         </ul>
     </li>
