--- a/src/app/shared/components/form-controls/input-simple/input-simple.component.css
+++ b/src/app/shared/components/form-controls/input-simple/input-simple.component.css
@@ -1,3 +1,17 @@
-label, .form-text, .form-control-feedback {
+.form-text, .form-control-feedback {
     user-select: none;
+}
+
+input[type=number] {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
+    text-align: right;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
