--- a/src/app/shared/components/form-controls/input-simple/input-simple.component.html
+++ b/src/app/shared/components/form-controls/input-simple/input-simple.component.html
@@ -1,15 +1,16 @@
 <div class="form-group" [ngClass]="controlGroupValidationClasses()">
     <label class="form-control-label" [attr.for]="name">{{ label }}</label>
     <input  autocomplete="off"
-            class="form-control form-control-danger form-control-success"
+            [ngClass]="controlClasses()"
             [attr.type]="type"
             [attr.id]="name" [attr.name]="name"
             [attr.placeholder]="placeholder"
+            [attr.step]="step"
             [readonly]="readOnly"
             [(ngModel)]="modelValue"
             (focus)="onTouchedCallback()" />
     <ng-content></ng-content>
-    <div *ngIf="control.dirty && !control.valid" class="form-control-feedback">
+    <div *ngIf="hasFeedback && (control.dirty || control.touched) && !control.valid" class="form-control-feedback">
         <div *ngFor="let error of (control.errors | controlError)">
             {{ error.msg }}
         </div>
