--- a/src/app/home/dashboard/dashboard.component.css
+++ b/src/app/home/dashboard/dashboard.component.css
@@ -6,26 +6,10 @@ hr {
     margin-top: 12px;
 }
 
-.btn-group {
-    font-size: 0;
+.nav {
+    margin-right: 12px;
 }
 
-.btn-group button {
-    font-size:16px
-}
-
-.btn-group button:first-child {
-    border-radius: .25rem 0 0 .25rem;
-    border-right: none;
-}
-
-.btn-group button:not(:first-child) {
-    border-width: 1px 0 1px 1px;
-    border-radius: 0;
-}
-
-
-.btn-group button:last-child {
-    border-width: 1px;
-    border-radius: 0 .25rem .25rem 0
+.page-link {
+    color: inherit;
 }
