--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <div class="dashboard">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="main-content">
+        <div id="main-content" class="main-content">
             <router-outlet></router-outlet>
         </div>
     </div>
