--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<ul class="nav nav-pills nav-stacked">
+<ul class="nav flex-column">
     <li class="nav-item">
         <div class="p-l-1 m-t-1 text-muted nav-section-name"><i class="fa fa-fw fa-cubes"></i> Inventario</div>
-        <ul class="nav-child">
+        <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" routerLink="inventario/movimientos" routerLinkActive="active">Ingresos y Egresos</a>
                 <a class="nav-link" routerLink="inventario/guias" routerLinkActive="active">Guias y Documentos</a>
@@ -12,7 +12,7 @@
     </li>
     <li class="nav-item">
         <div class="p-l-1 m-t-1 text-muted nav-section-name"><i class="fa fa-fw fa-dollar"></i> Contabilidad</div>
-        <ul class="nav-child">
+        <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" routerLink="contabilidad/facturas" routerLinkActive="active">Pagos y Facturas</a>
             </li>
@@ -20,7 +20,7 @@
     </li>
     <li class="nav-item">
         <div class="p-l-1 m-t-1 nav-section-name"><i class="fa fa-fw fa-database"></i> Administracion</div>
-        <ul class="nav-child">
+        <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" routerLink="administracion/bodegas" routerLinkActive="active">Bodegas</a>
                 <a class="nav-link" routerLink="administracion/materiales" routerLinkActive="active">Materiales</a>
@@ -32,7 +32,7 @@
     </li>
     <li class="nav-item">
         <div class="p-l-1 m-t-1 nav-section-name"><i class="fa fa-fw fa-cogs"></i> Panel de Control</div>
-        <ul class="nav-child">
+        <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link" routerLink="panel/recursos" routerLinkActive="active">Datos y Recursos</a>
             </li>
